src/renderers/snapshots/moon_cram__renderers__diff__tests__invalid_exit_code_cram.snap
---
source: src/renderers/diff.rs
assertion_line: 244
expression: rendered
---
--- the location
+++ the location.new
@@ -236 +236 @@ invalid exit code: the title
-  [111]
+  [222]

