src/renderers/snapshots/moon_cram__renderers__diff__tests__json_schema_failed_invalid_schema.snap
---
source: src/renderers/diff.rs
assertion_line: 739
expression: rendered
---
--- the location
+++ the location.new
# ---- JSON SCHEMA VALIDATION FAILED ----
# PATH:  the location
# TITLE: the title
# KIND:  InvalidSchema
# ERROR: failed to parse schema: invalid YAML
# OUTPUT:
# {"foo": "bar"}
# ---- JSON SCHEMA VALIDATION FAILED ----

