src/renderers/snapshots/moon_cram__renderers__diff__tests__malformed_output_missing_cram.snap
---
source: src/renderers/diff.rs
assertion_line: 377
expression: rendered
---
--- the location
+++ the location.new
@@ -236 +236,0 @@ malformed output: the title
-  expected line 2

