src/renderers/snapshots/moon_cram__renderers__diff__tests__malformed_output_unexpected_cram.snap
---
source: src/renderers/diff.rs
assertion_line: 377
expression: rendered
---
--- the location
+++ the location.new
@@ -235,0 +235 @@ malformed output: the title
+  something else
