src/renderers/snapshots/moon_cram__renderers__diff__tests__render_missing_cram.snap
---
source: src/renderers/diff.rs
assertion_line: 546
expression: rendered
---
--- location1
+++ location1.new
@@ -12 +12,0 @@ malformed output: the title
-  expected line 2

--- location2
+++ location2.new
@@ -22 +22,0 @@ malformed output: the title
-  expected line 2

